indus/test/test_examples/type_errors/assignment.tpc
tele bool[10] l;
tele bit<32> x;
init {
    x = l[2];
} 
telemetry {} 
check {}